--- a/index.html
+++ b/index.html
@@ -50,6 +50,55 @@
                 </article>
             </div>
         </section>
+        <section class="what_we_do">
+            <div class="container">
+                <h3>What we do.</h3>
+                <h4>The areas that we're specialized in.</h4>
+                <div class="cards">
+                <article>
+                    <div class="description">
+                        <h4>
+                            Product Photography
+                        </h4>
+                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                        <a href="#">Read more</a>
+                    </div>
+                    <img src="images/IMAGE-3.jpg" alt="images">
+                </article>
+                <article>
+                    <div class="description">
+                        <h4>
+                            Architecture Photography
+                        </h4>
+                        <p>
+                            Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.
+                        </p>
+                        <a href="#">Read more</a>
+                    </div>
+                    <img src="images/IMAGE-4.jpg" alt="images">
+                </article>
+                <article>
+                    <div class="description">
+                    <h4>
+                        Drone Photography
+                    </h4>
+                    <p>
+                        Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.
+                    </p>
+                    <a href="#">Read more</a>
+                    </div>
+                    <img src="images/IMAGE-5.jpg" alt="images">
+                </article>
+                <article>
+                    <div class="description">
+                      <h4> Wildlife Photography</h4>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
+                      <a href="#">Read more</a>
+                    </div>
+                    <img src="images/IMAGE-6.jpg" alt="images">
+                </article>
+            </div>
+        </section>
         <section class="sunset">
             <article>
                 <h4>
@@ -69,6 +118,29 @@
                     Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.
                 </p>
             </article>
+        </section>
+         <section class="clients">
+            <div class="container">
+                <h2>Past clients</h2>
+                <p>Trusted by your favourite companies</p>
+                <div class="carousel">
+                    <a href="#">
+                        <img src="images/Clien_1.svg" alt="client">
+                    </a>
+                    <a href="#">
+                        <img src="images/Client_2.svg" alt="client">
+                    </a>
+                    <a href="#">
+                        <img src="images/Client_3.svg" alt="client">
+                    </a>
+                    <a href="#">
+                        <img src="images/Client_4.svg" alt="client">
+                    </a>
+                    <a href="#">
+                        <img src="images/Client_5.svg" alt="client">
+                    </a>
+                </div>
+            </div>
         </section>
         <section class="star">
             <article>
