add section tools and icon bar

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                 </article>
             </div>
+            <ul class="bottom_icons">
+                <li>1/2000s</li>
+                <li>f/11</li>
+                <li>100</li>
+                <li>Iceland</li>
+            </ul>
         </section>
         <section class="what_we_do">
             <div class="container">
@@ -108,6 +114,17 @@
                     Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.
                 </p>
             </article>
+        </section>
+        <section class="tools">
+            <div class="container">
+                <article>
+                    <h4>The Gear cage</h4>
+                    <h3>The tools that we use.</h3>
+                    <p>The say that "no place is boring if you've had a good night's sleep and<br>have a pocket full of unexposed film". While we don't shoot (a lot) of film <br>these days — these are the tools that we actually use everyday to<br>capture the amazing things around us.</p>
+                    <a href="#">Check it out</a>
+                </article>
+            </div>
+            <div class="by_img"></div>
         </section>
         <section class="leafs">
             <article>
