i dont fucking now what to do with tools

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <section class="main_banner">
-            <div class="container">
+            <div class="content__container">
                 <article>
                     <h3>Photographer & Filmmaker</h3>
                     <h1>Aperture Studios</h1>
@@ -57,7 +57,7 @@
             </ul>
         </section>
         <section class="what_we_do">
-            <div class="container">
+            <div class="content__container">
                 <h3>What we do.</h3>
                 <h4>The areas that we're specialized in.</h4>
                 <div class="cards">
@@ -105,7 +105,7 @@
                 </article>
             </div>
         </section>
-        <section class="sunset">
+       <section class="sunset">
             <article>
                 <h4>
                     Sunset at Mount Fuji
@@ -114,6 +114,12 @@
                     Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.
                 </p>
             </article>
+            <ul class="bottom_icons">
+                    <li>1/400s</li>
+                    <li>f/3,5</li>
+                    <li>100</li>
+                    <li>Costa Rica</li>
+                </ul>
         </section>
         <section class="tools">
             <div class="container">
@@ -126,6 +132,18 @@
             </div>
             <div class="by_img"></div>
         </section>
+        </section>
+        <section class="tools">
+            <section class="content__container tools_container">
+                <section class="tools_text">
+                    <h4>The Gear cage</h4>
+                    <h3>The tools that we use.</h3>
+                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of unexposed film". While we don't shoot (a lot) of film  these days — these are the tools that we actually use everyday to capture the amazing things around us.</p>
+                    <a href="#">Check it out</a>
+                </section>
+            </section>>
+            <div class="by_img"></div>
+        </section>
         <section class="leafs">
             <article>
                 <h4>
@@ -135,6 +153,12 @@
                     Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.
                 </p>
             </article>
+            <ul class="bottom_icons">
+                    <li>1/400s</li>
+                    <li>f/3,5</li>
+                    <li>100</li>
+                    <li>Costa Rica</li>
+                </ul>
         </section>
          <section class="clients">
             <div class="container">
@@ -168,6 +192,12 @@
                     Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.    
                 </p>
             </article>
+            <ul class="bottom_icons">
+                    <li>6''</li>
+                    <li>f/11</li>
+                    <li>800</li>
+                    <li>Nepal</li>
+                </ul>
         </section>
         <section class="contact">
             <div class="contact_container">
@@ -181,5 +211,86 @@
             </div>
         </section>
     </main>
+    <footer class="container">
+        <div class="container pages">
+            <div class="left_first">
+                <a href="#">
+                    <img src="images/logo.svg" alt="logo">
+                </a>
+                <p>Photographers & videographers capturing the world around us.</p>
+            </div>
+            <div class="right_first">
+                <ul>
+                    <li class="footer_paragraph">Business areas</li>
+                    <li>
+                        <a href="#">Product Photography</a>
+                    </li>
+                    <li>
+                        <a href="#">Architecture Photography</a>
+                    </li>
+                    <li>
+                        <a href="#">Drone Photography</a>
+                    </li>
+                    <li>
+                        <a href="#">Wildlife Photography</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="footer_paragraph">Pages</li>
+                    <li>
+                        <a href="#">Gear cage</a>
+                    </li>
+                    <li>
+                        <a href="#">Featured images</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#">Style guide</a>
+                    </li>
+                    <li>
+                        <a href="#">Instructions</a>
+                    </li>
+                    <li>
+                        <a href="#">Changelog</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <div class="left_first">
+                <h4 >Subscribe to our newsletter</h4>
+                <p>Read about all the things we do.</p>
+            </div>
+            <form action="" method="post" name="subscribe">
+                <input type="email" name="email">
+            <button type="submit"></button>
+            </form>
+        </div>
+        <div class="container social_links">
+            <div class="left_first">
+                <p>© Aperture Photography, Inc. All rights reserved. <a href="#">Licensing</a>
+                </p>
+            </div>
+            <ul>
+                <li>
+                    <a href="#" title="twitter" target="_blank">
+                         <img src="images/twitter.svg" alt="twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="Instagram" target="_blank">
+                        <img src="images/inst.svg" alt="Instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="facebook" target="_blank">
+                        <img src="images/facebook.svg" alt="facebook">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
