--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 </p>
             </article>
             <ul class="bottom_icons">
-                    <li>1/400s</li>
-                    <li>f/3,5</li>
-                    <li>100</li>
-                    <li>Costa Rica</li>
+                    <li>1''</li>
+                    <li>f/16</li>
+                    <li>400</li>
+                    <li>Japan</li>
                 </ul>
         </section>
         <section class="tools">
@@ -126,23 +126,12 @@
                 <article>
                     <h4>The Gear cage</h4>
                     <h3>The tools that we use.</h3>
-                    <p>The say that "no place is boring if you've had a good night's sleep and<br>have a pocket full of unexposed film". While we don't shoot (a lot) of film <br>these days — these are the tools that we actually use everyday to<br>capture the amazing things around us.</p>
+                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we actually use everyday to capture the amazing things around us.</p>
                     <a href="#">Check it out</a>
                 </article>
             </div>
             <div class="by_img"></div>
         </section>
-        </section>
-        <section class="tools">
-            <section class="content__container tools_container">
-                <section class="tools_text">
-                    <h4>The Gear cage</h4>
-                    <h3>The tools that we use.</h3>
-                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of unexposed film". While we don't shoot (a lot) of film  these days — these are the tools that we actually use everyday to capture the amazing things around us.</p>
-                    <a href="#">Check it out</a>
-                </section>
-            </section>>
-            <div class="by_img"></div>
         </section>
         <section class="leafs">
             <article>
