--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -12,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -46,7 +48,10 @@
                 <article>
                     <h3>Photographer & Filmmaker</h3>
                     <h1>Aperture Studios</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                        elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
+                        diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut
+                        sem vitae risus tristique posuere.</p>
                 </article>
             </div>
             <ul class="bottom_icons">
@@ -61,51 +66,58 @@
                 <h3>What we do.</h3>
                 <h4>The areas that we're specialized in.</h4>
                 <div class="cards">
-                <article>
-                    <div class="description">
-                        <h4>
-                            Product Photography
-                        </h4>
-                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-                        <a href="#">Read more</a>
-                    </div>
-                    <img src="images/IMAGE-3.jpg" alt="images">
-                </article>
-                <article>
-                    <div class="description">
-                        <h4>
-                            Architecture Photography
-                        </h4>
-                        <p>
-                            Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.
-                        </p>
-                        <a href="#">Read more</a>
-                    </div>
-                    <img src="images/IMAGE-4.jpg" alt="images">
-                </article>
-                <article>
-                    <div class="description">
-                    <h4>
-                        Drone Photography
-                    </h4>
-                    <p>
-                        Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.
-                    </p>
-                    <a href="#">Read more</a>
-                    </div>
-                    <img src="images/IMAGE-5.jpg" alt="images">
-                </article>
-                <article>
-                    <div class="description">
-                      <h4> Wildlife Photography</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
-                      <a href="#">Read more</a>
-                    </div>
-                    <img src="images/IMAGE-6.jpg" alt="images">
-                </article>
-            </div>
+                    <article>
+                        <div class="description">
+                            <h4>
+                                Product Photography
+                            </h4>
+                            <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor
+                                hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                            <a href="#">Read more</a>
+                        </div>
+                        <img src="images/IMAGE-3.jpg" alt="images">
+                    </article>
+                    <article>
+                        <div class="description">
+                            <h4>
+                                Architecture Photography
+                            </h4>
+                            <p>
+                                Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas
+                                pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt
+                                aliquet sapien, sit amet rhoncus leo imperdiet nec.
+                            </p>
+                            <a href="#">Read more</a>
+                        </div>
+                        <img src="images/IMAGE-4.jpg" alt="images">
+                    </article>
+                    <article>
+                        <div class="description">
+                            <h4>
+                                Drone Photography
+                            </h4>
+                            <p>
+                                Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed
+                                lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla
+                                efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.
+                            </p>
+                            <a href="#">Read more</a>
+                        </div>
+                        <img src="images/IMAGE-5.jpg" alt="images">
+                    </article>
+                    <article>
+                        <div class="description">
+                            <h4> Wildlife Photography</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio
+                                et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum
+                                dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
+                            <a href="#">Read more</a>
+                        </div>
+                        <img src="images/IMAGE-6.jpg" alt="images">
+                    </article>
+                </div>
         </section>
-       <section class="sunset">
+        <section class="sunset">
             <article>
                 <h4>
                     Sunset at Mount Fuji
@@ -115,18 +127,20 @@
                 </p>
             </article>
             <ul class="bottom_icons">
-                    <li>1''</li>
-                    <li>f/16</li>
-                    <li>400</li>
-                    <li>Japan</li>
-                </ul>
+                <li>1''</li>
+                <li>f/16</li>
+                <li>400</li>
+                <li>Japan</li>
+            </ul>
         </section>
         <section class="tools">
             <div class="container">
                 <article>
                     <h4>The Gear cage</h4>
                     <h3>The tools that we use.</h3>
-                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we actually use everyday to capture the amazing things around us.</p>
+                    <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of
+                        unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we
+                        actually use everyday to capture the amazing things around us.</p>
                     <a href="#">Check it out</a>
                 </article>
             </div>
@@ -143,13 +157,13 @@
                 </p>
             </article>
             <ul class="bottom_icons">
-                    <li>1/400s</li>
-                    <li>f/3,5</li>
-                    <li>100</li>
-                    <li>Costa Rica</li>
-                </ul>
+                <li>1/400s</li>
+                <li>f/3,5</li>
+                <li>100</li>
+                <li>Costa Rica</li>
+            </ul>
         </section>
-         <section class="clients">
+        <section class="clients">
             <div class="container">
                 <h2>Past clients</h2>
                 <p>Trusted by your favourite companies</p>
@@ -178,15 +192,16 @@
                     Star fall in the Himalayas
                 </h4>
                 <p>
-                    Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.    
+                    Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et,
+                    vulputate ut ligula.
                 </p>
             </article>
             <ul class="bottom_icons">
-                    <li>6''</li>
-                    <li>f/11</li>
-                    <li>800</li>
-                    <li>Nepal</li>
-                </ul>
+                <li>6''</li>
+                <li>f/11</li>
+                <li>800</li>
+                <li>Nepal</li>
+            </ul>
         </section>
         <section class="contact">
             <div class="contact_container">
@@ -249,12 +264,12 @@
         </div>
         <div class="container">
             <div class="left_first">
-                <h4 >Subscribe to our newsletter</h4>
+                <h4>Subscribe to our newsletter</h4>
                 <p>Read about all the things we do.</p>
             </div>
             <form action="" method="post" name="subscribe">
                 <input type="email" name="email">
-            <button type="submit"></button>
+                <button type="submit"></button>
             </form>
         </div>
         <div class="container social_links">
@@ -265,7 +280,7 @@
             <ul>
                 <li>
                     <a href="#" title="twitter" target="_blank">
-                         <img src="images/twitter.svg" alt="twitter">
+                        <img src="images/twitter.svg" alt="twitter">
                     </a>
                 </li>
                 <li>
@@ -282,4 +297,5 @@
         </div>
     </footer>
 </body>
+
 </html>
