--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+     <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
@@ -168,7 +170,8 @@
             <div class="container">
                 <h2>Past clients</h2>
                 <p>Trusted by your favourite companies</p>
-                <div class="carousel">
+
+                <div class="carousel owl-carousel">
                     <a href="#">
                         <img src="images/Clien_1.svg" alt="client">
                     </a>
@@ -297,6 +300,9 @@
             </ul>
         </div>
     </footer>
+    <script   src="https://code.jquery.com/jquery-3.6.4.min.js"   integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="   crossorigin="anonymous"></script>
+    <script src="js/owl.carousel.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
