--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <h2>Past clients</h2>
                 <p>Trusted by your favourite companies</p>
 
-                <div class="carousel owl-carousel">
+                <div class="carousel">
                     <a href="#">
                         <img src="images/Clien_1.svg" alt="client">
                     </a>
